<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Madhumitra</string>
    <string name="no_users_string">No User Account can be found. Please access menu to add User Account(s).</string>
    <string name="intro">WE ARE HAPPY TO BE A PART OF YOUR JOURNEY TO BETTER HEALTH</string>
    <string name="title">MADHUMITRA</string>
    <string name="bsl_id">BSL</string>
    <string name="preferences_id">madhumitra_preferences</string>
    <string-array name="duration_array">
        <item>Today</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string name="act_report_file">/sdcard/activityreport.csv</string>
    <string name="med_dose_not_notified">not_notified</string>
    <string name="med_dose_notified">notified</string>
    <string name="med_dose_taken">taken</string>
    <string name="med_dose_missed">missed</string>

    <string name="med_dose_tag_morn">morning</string>
    <string name="med_dose_tag_noon">afternoon</string>
    <string name="med_dose_tag_even">evening</string>
    <string name="med_dose_tag_night">night</string>

    <string-array name="notification_ack_actions_self">
        <item>Dose Taken</item>
        <item>Dose Missed</item>
    </string-array>


    <string-array name="notification_ack_actions">
        <item>Call</item>
        <item>Send SMS</item>
        <item>Dose Taken</item>
        <item>Dose Missed</item>
    </string-array>

    <string-array name="record_type">
        <item>Activity Records</item>
        <item>Meal Records</item>
        <item>Exercise Records</item>
        <item>BSL Records</item>
        <item>Prescriptions</item>
        <item>Doctors</item>
    </string-array>

    <string-array name="user_lifestyle">
        <item>Sedentary (No exercise)</item>
        <item>Lightly Active (Exercise: 1-3 days/week)</item>
        <item>Moderately Active (Exercise: 3-5 days/week)</item>
        <item>Active (Exercise: 6-7 days/week)</item>
        <item>Very Active (Heavy exercise/phy. job)</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile">PROFILE</string>
    <string name="add_doctor">ADD DOCTOR</string>
    <string name="view_doctor">VIEW DOCTOR</string>
    <string name="delete_records">DELETE RECORDS</string>
    <string name="report">REPORT</string>
    <string name="setting">SETTING</string>
    <string name="exit">EXIT</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>PROFILE</item>
        <item>ADD DOCTOR</item>
        <item>VIEW DOCTOR</item>
        <item>DELETE RECORDS</item>
        <item>REPORT</item>
        <item>SETTING</item>
        <item>EXIT</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="ob_header1">SIMPLE ABROAD CALLS</string>
    <string name="ob_header2">FREE WONEP TO WONEP</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>

    <string name="ob_get_started">SKIP</string>

    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>

</resources>
