<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_add"
            android:title="@string/add_doctor" />
        <item
            android:id="@+id/nav_view"
            android:title="@string/view_doctor" />
        <item
            android:id="@+id/nav_delete"
            android:title="@string/delete_records" />
        <item
            android:id="@+id/nav_reports"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit" />
    </group>
</menu>
